--- a/src/app/gifs/gifs-page/gifs-page.component.html
+++ b/src/app/gifs/gifs-page/gifs-page.component.html
@@ -12,4 +12,12 @@
       </div>
 
     </div>
+    <hr>
+    <div class="row">
+      <div class="col">
+        <app-foother></app-foother>
+      </div>
+
+    </div>
+
   </div>
