--- a/src/app/gifs/resultados/resultados.component.html
+++ b/src/app/gifs/resultados/resultados.component.html
@@ -4,11 +4,11 @@
     </li>
 </ul>-->
 
-<div class="row">
+<!-- <div class="row">
     <div *ngFor="let gif of resultados" 
         class="col-md-4 col-sm-6 animate__animated animate__fadeIn">
         <div class="card">
-<!--los [src] para que le establezca el valor que viene de la url-->            
+los [src] para que le establezca el valor que viene de la url            
             <img    [src]="gif.images.downsized_medium.url" 
                     alt="gif.title"
                     class="card-img-top"
@@ -21,4 +21,31 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
+
+<div class="bg-light py-5">
+    <div class="container">
+      <div class="row">
+        <div *ngFor="let gif of resultados" class="col-lg-4 col-md-6 col-sm-12 animate__animated animate__zoomIn">
+          <div class="card h-100 shadow-sm" style="background-color: #e6f4f1;">
+            <div class="position-relative">
+              <img [src]="gif.images.downsized_medium.url" alt="{{gif.title}}" class="card-img-top">
+              <div class="overlay">
+                <a href="{{gif.url}}" class="btn btn-secondary" target="_blank">Ver en GIPHY</a>
+              </div>
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">{{gif.title}}</h5>
+            </div>
+          </div>
+          <div class="mt-3"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  
+  
+  
+  
+  
