--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,20 +1,38 @@
-<div class="bg-dark border-right p-3" id="sidebar">
-    <h3 class="text-light">
-      Gifs-App
-    </h3>
-    <hr class="text-white"/>
-    <div class="list-group list-reset">
-      <a *ngFor="let item of historial"
-          (click)="buscar(item)"
-          href="#"
-          class="list-group-item list-group-item-action">
-        <!-- este pipe de titlecase hace que
-        cada palabra recibida desde las busquedas, cambie la
-        primera letra en mayusculas. los pipes solo manipulan
-        y tranforman de forma visual en el template
-        no hace modificaciones a la data-->
+<div class="bg-primary text-white border-right" id="sidebar">
+  <div class="p-3 d-flex justify-content-between align-items-center">
+    <h3>Gifs-App</h3>
+    <button class="btn btn-secondary d-md-none" type="button" data-toggle="collapse" data-target="#sidebarCollapse"
+      aria-controls="sidebarCollapse" aria-expanded="false" aria-label="Toggle sidebar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  </div>
+  <hr class="m-0">
 
-        {{item | titlecase}}
+  <div class="p-3">
+    <h5>Historial de Búsqueda</h5>
+    <div class="list-group mt-3" [@fadeAnimation]="historial.length">
+      <a *ngFor="let item of historial" 
+         class="list-group-item list-group-item-action" 
+         (click)="buscar(item)" 
+         [@itemAnimation]>
+        {{ item | titlecase }}
       </a>
+      <div class="mt-3" *ngIf="historial.length === 0">
+        <p class="text-muted">No hay historial de búsqueda</p>
+      </div>
     </div>
+  </div>
+  
+  <!-- <div class="p-3">
+    <h5>Historial de Búsqueda</h5>
+    <div class="list-group mt-3">
+      <a *ngFor="let item of historial" class="list-group-item list-group-item-action" (click)="buscar(item)">
+        {{ item | titlecase }}
+      </a>
+      <div class="mt-3" *ngIf="historial.length === 0">
+        <p class="text-muted">No hay historial de búsqueda</p>
+      </div>
+    </div>
+  </div> -->
+
 </div>
